#1636 get rid of Lombok in langchain4j-core